fixed flickering mobile navigation

--- a/project/client/static/css/main.scss
+++ b/project/client/static/css/main.scss
@@ -61,6 +61,13 @@ $xxxlarge: 2560px;
     //outline: .5px dashed red;
 }
 
+.preload * {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
+}
+
 body {
     font-size: 16px;
     margin: 0;
